actualizacion de localizacion y estilos en general

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             <p>Solo por la fe Dios Salva</p>
                         </div>
                     </div>
-                    <div class="d-flex">
+                    <div class="d-flex mb-3">
                         <div class="iconbox me-4">
                             <i class="ri-user-5-fill"></i>
                         </div>
@@ -150,7 +150,7 @@
                             <p>Solo por la Gracia</p>
                         </div>
                     </div>
-                    <div class="d-flex">
+                    <div class="d-flex mb-3">
                         <div class="iconbox me-4">
                             <i class="ri-user-5-fill"></i>
                         </div>
@@ -159,7 +159,7 @@
                             <p>Solo Cristo Salva</p>
                         </div>
                     </div>
-                    <div class="d-flex">
+                    <div class="d-flex mb-3">
                         <div class="iconbox me-4">
                             <i class="ri-user-5-fill"></i>
                         </div>
@@ -181,88 +181,84 @@
                     <div class="section-title">
                         <h1 class="display-4 fw-semibold">Nuestros Servicios</h1>
                         <div class="line"></div>
-                        <p>Conoce Nuestras Sedes, Horarios y Reuniones</p>
+                        <p>La Iglesia Bautista de Sogamoso se extiende para bendición de las familias boyacenses, y para
+                            la Gloria de nuestro Señor y Salvador Jesucristo.
+                            Acompáñanos en:</p>
                     </div>
                 </div>
             </div>
 
-            <div class="row g-4 text-center">
-                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-user-2-fill"></i>
-                        </div>
-                        <h5 class="mt-4 mb-3">Tunja</h5>
-                        <p>
-                            Domingo: Estudio Bíblico 10:00 a.m
-                            Miércoles: Culto de Oración 7:00 p.m
-                            Viernes: Discipulado 6:30 p.m
-                        </p>
-                        <p>
-                            Carrera 7a No. 51-01 La Granja Norte Parte Baja
-                            Mayor información: 301 3149610
-                        </p>
+            <div class="row row-cols-1 row-cols-md-2 g-4 text-center">
 
+                <!-- SOGAMOSO -->
+                <div class="col" data-aos="fade-down" data-aos-delay="250">
+                    <div class="service theme-shadow p-lg-5 p-4 h-100">
+                        <a class="gps-link" data-address="Carrera 14 # 18-47, Sogamoso, Boyacá, Colombia"
+                            target="_blank" rel="noopener noreferrer"
+                            aria-label="Abrir ubicación de Sogamoso en Google Maps">
+                            <i class="ri-map-pin-2-fill"></i>
+                        </a>
 
+                        <div class="iconbox"><i class="ri-user-2-fill"></i></div>
+                        <h5 class="mt-4 mb-3">SOGAMOSO</h5>
+                        <p>Domingo: Escuela Dominical y Predicación 10:00 a.m</p>
+                        <p>Viernes: Estudio Bíblico 6:30 p.m</p>
+                        <p>CARRERA 14 N° 18 - 47 — Barrio el Prado</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="250">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-user-2-fill"></i>
-                        </div>
-                        <h5 class="mt-4 mb-3">Sogamoso</h5>
-                        <p>
-                            Domingo: Escuela Dominical y Predicación 10:00 a.m </p>
-                        <p>
-                            Viernes: Estudio Bíblico 6:30 p.m
-                        </p>
+
+                <!-- TUNJA -->
+                <div class="col" data-aos="fade-down" data-aos-delay="150">
+                    <div class="service theme-shadow p-lg-5 p-4 h-100">
+                        <a class="gps-link" data-address="Carrera 7a # 51-01, Tunja, Boyacá, Colombia" target="_blank"
+                            rel="noopener noreferrer" aria-label="Abrir ubicación de Tunja en Google Maps">
+                            <i class="ri-map-pin-2-fill"></i>
+                        </a>
+
+                        <div class="iconbox"><i class="ri-user-2-fill"></i></div>
+                        <h5 class="mt-4 mb-3">TUNJA</h5>
+                        <p>TODOS LOS DOMINGOS 10:00 AM</p>
+                        <p>CARRERA 7A N° 51 - 01</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-user-2-fill"></i>
-                        </div>
-                        <h5 class="mt-4 mb-3">Duitama</h5>
-                        <p>
-                            Domingo: Escuela Dominical y Predicación 10:00 a.m </p>
-                        <p>
-                            Viernes: Estudio Bíblico 6:30 p.m
-                        </p>
+
+                <!-- DUITAMA -->
+                <div class="col" data-aos="fade-down" data-aos-delay="350">
+                    <div class="service theme-shadow p-lg-5 p-4 h-100">
+                        <a class="gps-link" data-address="Carrera 15 # 14-58, Edificio Plaza, Duitama, Boyacá, Colombia"
+                            target="_blank" rel="noopener noreferrer"
+                            aria-label="Abrir ubicación de Duitama en Google Maps">
+                            <i class="ri-map-pin-2-fill"></i>
+                        </a>
+
+                        <div class="iconbox"><i class="ri-user-2-fill"></i></div>
+                        <h5 class="mt-4 mb-3">DUITAMA</h5>
+                        <p>TODOS LOS DOMINGOS 9:30 AM</p>
+                        <p>CARRERA 15 N° 14 -58 — Auditorio Edificio Plaza</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="450">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-user-2-fill"></i>
-                        </div>
-                        <h5 class="mt-4 mb-3">Reunion de Varones</h5>
-                        <h5 class="mt-4 mb-3">Sogamoso</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
+
+                <!-- CHIQUINQUIRÁ -->
+                <div class="col" data-aos="fade-down" data-aos-delay="450">
+                    <div class="service theme-shadow p-lg-5 p-4 h-100">
+                        <a class="gps-link"
+                            data-address="Calle 17 # 8-44, Hotel Alcarraza, Chiquinquirá, Boyacá, Colombia"
+                            target="_blank" rel="noopener noreferrer"
+                            aria-label="Abrir ubicación de Chiquinquirá en Google Maps">
+                            <i class="ri-map-pin-2-fill"></i>
+                        </a>
+
+                        <div class="iconbox"><i class="ri-user-2-fill"></i></div>
+                        <h5 class="mt-4 mb-3">CHIQUINQUIRÁ</h5>
+                        <p>TODOS LOS DOMINGOS 10:00 AM</p>
+                        <p>CALLE 17 N° 8 - 44 — Hotel Alcarraza</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="550">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-user-2-fill"></i>
-                        </div>
-                        <h5 class="mt-4 mb-3">Reunion de Mujeres</h5>
-                        <h5 class="mt-4 mb-3">Sogamoso</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="650">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="ri-user-2-fill"></i>
-                        </div>
-                        <h5 class="mt-4 mb-3">Reunion de Jóvenes</h5>
-                        <h5 class="mt-4 mb-3">Sogamoso</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
-                    </div>
-                </div>
+
             </div>
+
+
+
         </div>
     </section>
 
@@ -613,6 +609,21 @@
                 </div>
             </div>
             <div class="row">
+
+                <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
+                    <div class="team-member image-zoom">
+                        <div class="image-zoom-wrapper">
+                            <iframe src="https://www.youtube.com/embed/mUREEVTIWLw" title="YouTube video player"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                        <h5 class="mt-4">EPISTOLA A LOS ROMANOS - Romanos 1:18-27- Parte XXV - 17/08/2025</h5>
+                        <p></p>
+                        <a href="https://www.youtube.com/watch?v=mUREEVTIWLw" target="_blank">ver Video</a>
+                    </div>
+                </div>
+
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
@@ -626,6 +637,7 @@
                         <a href="https://www.youtube.com/watch?v=BWpeQ-jS9Ko" target="_blank">ver Video</a>
                     </div>
                 </div>
+
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
@@ -639,19 +651,7 @@
                         <a href="https://www.youtube.com/watch?v=VTfjHfujQnE" target="_blank">Ver video</a>
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
-                    <div class="team-member image-zoom">
-                        <div class="image-zoom-wrapper">
-                            <iframe src="https://www.youtube.com/embed/OuVpdaZOwMo" title="YouTube video player"
-                                frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                        </div>
-                        <h5 class="mt-4">ESTUDIO BIBLICO - 1 PEDRO - Parte XXVII- 08/08/2025</h5>
-                        <p></p>
-                        <a href="https://www.youtube.com/watch?v=OuVpdaZOwMo" target="_blank">ver Video</a>
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
